--- a/index.html
+++ b/index.html
@@ -173,32 +173,91 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-4">
-                                <div class="user-img">
-                                     <img src="./image/user.png" alt="">
+                                <div class="user-wrap">
+                                    <div class="user-img">
+                                         <img src="./image/user.png" alt="">
+                                    </div>
+                                    <h4 class="user-title">Jonathon Doe</h4>
+                                    <div class="user-desc">Co Founder</div>
+                                    <p class="user-text">“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
                                 </div>
-                                <h4 class="user-title">Jonathon Doe</h4>
-                                <div class="user-desc">Co Founder</div>
-                                <p class="user-text">“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
                             </div>
                             <div class="col-4">
-                                <div class="user-img">
-                                    <img src="./image/user.png" alt="">
-                               </div>
-                               <h4 class="user-title">Jonathon Doe</h4>
-                               <div class="user-desc">Co Founder</div>
-                               <p class="user-text">“Pellentesque ornare sem lacinia quam. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn”</p>
+                                <div class="user-wrap">
+                                    <div class="user-img">
+                                        <img src="./image/user.png" alt="">
+                                   </div>
+                                   <h4 class="user-title">Jonathon Doe</h4>
+                                   <div class="user-desc">Co Founder</div>
+                                   <p class="user-text">“Pellentesque ornare sem lacinia quam. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn”</p>
+                                </div>
                             </div>
-                            <div class="col-4"><div class="user-img">
-                                <img src="./image/user.png" alt="">
-                           </div>
-                           <h4 class="user-title">Jonathon Doe</h4>
-                           <div class="user-desc">Co Founder</div>
-                           <p class="user-text">“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p></div>
+                            <div class="col-4">
+                                <div class="user-wrap">
+                                    <div class="user-img">
+                                    <img src="./image/user.png" alt="">
+                                    </div>
+                                     <h4 class="user-title">Jonathon Doe</h4>
+                                     <div class="user-desc">Co Founder</div>
+                                     <p class="user-text">“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="user-icon">
+                            <img src="./image/icon.png" alt="">
                         </div>
                     </div>
-                    <div class="user-icon">
-                        <img src="./image/icon.png" alt="">
+            </section>
+            <section class="awesone">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="awesone-wrap">
+                                <div class="awesone-title">
+                                    NEW FEATURES
+                                </div>
+                                <h4 class="awesone-desc">Some awesone features</h4>
+                                <p class="awesone-text">
+                                    Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.
+                                </p>
+                            </div>
+                            <div class="awesone-img">
+                                <img src="./image/img5.png" alt="">
+                            </div>
+                        </div>
                     </div>
+                </div>
+            </section>
+            <section class="over">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="over-wrap">
+                                <div class="over-title">
+                                    NEW FEATURES
+                                </div>
+                                <h4 class="over-desc">Over 1000 designers are using ...</h4>
+                                <div class="over-seach">
+                                    <input type="text" placeholder="FULL NAME" class="over-name">
+                                </div>
+                                <div class="over-seach">
+                                    <input type="text" placeholder="YOUR EMAIL" class="over-name">
+                                </div>
+                                <div class="over-seach">
+                                    <input type="text" placeholder="PASSWORD" class="over-name">
+                                </div>
+                                <div class="over-seach">
+                                    <div class="over-day">30 days free trial for all.</div>
+                                   <div class="over-img"><img src="./image/muiten.png" alt=""></div> 
+                                    <button>TRY NOW</button>
+                                </div>
+                                <p class="over-text">
+                                    By Signing up you agree to our terms & Services.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
         <!-- Phần footer -->
