--- a/index.html
+++ b/index.html
@@ -273,85 +273,51 @@
         <footer class="footer">
             <div class="container-fluid">
                 <div class="footer-main">
-                  <div class="footer-column">
-                    <img srcset="./image/logofooter.png 2x" alt="" class="footer-logo">
-                        <a href="" class="footer-linkt">Aenean lacinia bibendum nulla sed </a>
-                        <a href="" class="footer-linkt">consectetur. Aenean eu leo quam.  </a>
-                        <a href="" class="footer-linkt">USA &  CAN: 1-888-123-4567</a>
-                        <a href="" class="footer-linkt"> Address: 34 Brokel Rd. NY </a>
-                  </div> 
-                  <div class="footer-column">
-                    <h3 class="footer-heading">Support</h3>
-                    <ul class="footer-listter">
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">About</a>
-                      </li>
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Work</a>
-                      </li>
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Careers</a>
-                      </li>
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Pricing</a>
-                      </li>
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Blog</a>
-                      </li>
-                    </ul>
-                  </div>
+                    <div class="footer-column">
+                        <img srcset="./image/logofooter.png" alt="" class="footer-logo">
+                        <p class="footer-desc">Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. 
+                            USA &  CAN: 1-888-123-4567
+                            Address: 34 Brokel Rd. NY
+                        </p>
+                    </div>
+                    <div class="footer-column">
+                        <h3 class="footer-heading">Support</h3>
+                        <ul class="footer-listter">
+                        <li class="footer-itemm">
+                            <a href="" class="footer-link">Help Center</a>
+                        </li>
+                        <li class="footer-itemm">
+                            <a href="" class="footer-link">Get Started</a>
+                        </li>
+                        <li class="footer-itemm">
+                            <a href="" class="footer-link">Contact US</a>
+                        </li>
+                        </ul>
+                    </div>
                   <div class="footer-column">
                     <h3 class="footer-heading">About US</h3>
                     <ul class="footer-listter">
                       <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Branding</a>
+                        <a href="" class="footer-link">About us</a>
                       </li>
                       <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Websites</a>
+                        <a href="" class="footer-link">Terms of Use</a>
                       </li>
                       <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Development</a>
-                      </li>
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Strategy</a>
-                      </li>
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Platforms</a>
+                        <a href="" class="footer-link">Privacy Policy</a>
                       </li>
                     </ul>
-                    
                   </div>
                   <div class="footer-column">
                     <h3 class="footer-heading">Get Newsletter</h3>
-                    <ul class="footer-listter">
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Help Desk</a>
-                      </li>
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Docs</a>
-                      </li>
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Open a Ticket</a>
-                      </li>
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Chat</a>
-                      </li>
-                      <li class="footer-itemm">
-                        <a href="" class="footer-linkt">Forum</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="footer-column">
-                    <h3 class="footer-heading">Newsletter</h3>
-                   <p class="footer-descs">Subscribe to our newsletter to keep up to date on our marketing, website, design services, and tips.</p>
-                   <div class="footer-input">
-                    <input type="text" class="footer-inputt" placeholder="Enter email">
-              <div class="footer-link button">Submit</div>
-             </div>
-              <p class="footer-descs1">We hate spam as much as you do. We will never, ever send you such emails. </p>
-            </div>
-            </div>
-          </div>
+                    <form class="footer-logo">
+                        <input type="text" placeholder="EMAIL" class="footer-input">
+                        <img src="./image/footericon.png" alt="" class="footer-image">
+                    </form>
+                    <div class="footer-imag">
+                        <img src="./image/icon.png" alt="" class="footer-img">
+                    </div>
+                </div>
         </footer>
     </body>
 </html>
