--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Exo:ital@1&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;1,100;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="header">
@@ -64,7 +67,7 @@
                                     porttitor. Etiam porta sem malesuada magna
                                     mollis euismod. Vestibulum id ligula porta felis
                                     euismod semper.
-                                </p>
+                                </p><br>
                                 <p > Donec sed odio dui. Aenean
                                     lacinia bibendum nulla sed consectetur. Donec
                                     ullamcorper nulla non metus auctor fringilla.
@@ -147,25 +150,26 @@
             <section class="resposi">
                 <div class="container">
                     <div class="row">
-                        <div class="col-5">
-                            <div class="resposi-img">
-                                <img src="./image/img3.png" alt>
-                            </div>
-                            </div>
-                        <div class="col-2"></div>
-                        <div class="col-5">
-                            <div class="resposi-content">
-                                <div class="resposi-title">NEW DESIGN</div>
-                                <h4 class="resposi-desc">Resposive design, just
-                                need your tap <span class="resposi-dots">....</span></h1></h4>
-                                <p class="design-text">Aenean eu leo quam.
-                                    Pellentesque ornare sem lacinia quam venenatis
-                                    vestibulum. Donec id elit non mi porta gravida
-                                    at eget metus. Curabitur blandit tempus
-                                    porttitor. Etiam porta sem malesuada magna
-                                    mollis euismod. Vestibulum id ligula porta felis
-                                    euismod semper.
-                                </p>
+                        <div class="feature-wrap">
+                            <div class="col-7">
+                                <div class="resposi-img">
+                                    <img src="./image/img3.png" alt>
+                                </div>
+                                </div>
+                            <div class="col-5">
+                                <div class="resposi-content">
+                                    <div class="resposi-title">NEW DESIGN</div>
+                                    <h4 class="resposi-desc">Resposive design, just
+                                    need your tap <span class="resposi-dots">....</span></h1></h4>
+                                    <p class="design-text">Aenean eu leo quam.
+                                        Pellentesque ornare sem lacinia quam venenatis
+                                        vestibulum. Donec id elit non mi porta gravida
+                                        at eget metus. Curabitur blandit tempus
+                                        porttitor. Etiam porta sem malesuada magna
+                                        mollis euismod. Vestibulum id ligula porta felis
+                                        euismod semper.
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -232,6 +236,32 @@
             </section>
             <section class="over">
                 <div class="container">
+                    <div class="over-content">
+                        <h5 class="over-sub-title">
+                            NEW FEATURES
+                        </h5>
+                        <h3 class="over-title">
+                            Over 1000 designers are using ...
+                        </h3>
+                        <div class="over-days">
+                          <img src="./image/muiten.png" alt="" class="over-image">
+                          <a href="#" class="over-day">30 days free trial for all.</a>
+                        </div>
+                        <form class="over-form">
+                            <input type="text" class="my-input"  placeholder="FULL NAME">
+                            <input type="text"  class="my-input" placeholder="YOUR EMAIL">
+                            <input type="text"  class="my-input" placeholder="PASSWORD">
+                            <a href="#" class="btn btn-button"> TRY NOW</a>
+                        </form>
+                    </div>
+                    <p class="over-desc">
+                        By Signing up you agree to our <a href="#" class="over-link">terms & Services.</a> 
+                    </p>
+
+                </div>
+            </section>
+            <!-- <section class="over">
+                <div class="container">
                     <div class="row">
                         <div class="col-12">
                             <div class="over-wrap">
@@ -267,11 +297,11 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </div>
         <!-- Phần footer -->
         <footer class="footer">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="footer-main">
                     <div class="footer-column">
                         <img srcset="./image/logofooter.png" alt="" class="footer-logo">
@@ -294,7 +324,7 @@
                         </li>
                         </ul>
                     </div>
-                  <div class="footer-column">
+                    <div class="footer-column">
                     <h3 class="footer-heading">About US</h3>
                     <ul class="footer-listter">
                       <li class="footer-itemm">
@@ -307,17 +337,19 @@
                         <a href="" class="footer-link">Privacy Policy</a>
                       </li>
                     </ul>
-                  </div>
-                  <div class="footer-column">
+                    </div>
+                    <div class="footer-column">
                     <h3 class="footer-heading">Get Newsletter</h3>
                     <form class="footer-logo">
                         <input type="text" placeholder="EMAIL" class="footer-input">
-                        <img src="./image/footericon.png" alt="" class="footer-image">
+                        <a href="#"><img src="./image/iconfooter.png" alt="" class="footer-image"></a>
                     </form>
                     <div class="footer-imag">
-                        <img src="./image/icon.png" alt="" class="footer-img">
+                       <a href="#"><img src="./image/icon1.png" alt="" class="footer-img"></a> 
+                    </div>
                     </div>
                 </div>
+            </div>
         </footer>
     </body>
 </html>
