--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                     porttitor. Etiam porta sem malesuada magna
                                     mollis euismod. Vestibulum id ligula porta felis
                                     euismod semper.
-                                </p><br>
+                                </p>
                                 <p > Donec sed odio dui. Aenean
                                     lacinia bibendum nulla sed consectetur. Donec
                                     ullamcorper nulla non metus auctor fringilla.
@@ -150,13 +150,12 @@
             <section class="resposi">
                 <div class="container">
                     <div class="row">
-                        <div class="feature-wrap">
-                            <div class="col-7">
+                            <div class="col-7  col-reposive-left">
                                 <div class="resposi-img">
                                     <img src="./image/img3.png" alt>
                                 </div>
                                 </div>
-                            <div class="col-5">
+                            <div class="col-5 col-reposive-right">
                                 <div class="resposi-content">
                                     <div class="resposi-title">NEW DESIGN</div>
                                     <h4 class="resposi-desc">Resposive design, just
@@ -171,7 +170,6 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
                     </div>
                 </div>
             </section>
@@ -236,16 +234,16 @@
             </section>
             <section class="over">
                 <div class="container">
-                    <div class="over-content">
-                        <h5 class="over-sub-title">
-                            NEW FEATURES
-                        </h5>
-                        <h3 class="over-title">
-                            Over 1000 designers are using ...
-                        </h3>
-                        <div class="over-days">
+                    <h5 class="over-sub-title">
+                        NEW FEATURES
+                    </h5>
+                    <h3 class="over-title">
+                        Over 1000 designers are using ...
+                    </h3>
+                    <!-- <div class="over-content"> -->
+                    <div class="over-days">
                           <img src="./image/muiten.png" alt="" class="over-image">
-                          <a href="#" class="over-day">30 days free trial for all.</a>
+                          <a href="#" class="over-text">30 days free trial for all.</a>
                         </div>
                         <form class="over-form">
                             <input type="text" class="my-input"  placeholder="FULL NAME">
@@ -257,7 +255,6 @@
                     <p class="over-desc">
                         By Signing up you agree to our <a href="#" class="over-link">terms & Services.</a> 
                     </p>
-
                 </div>
             </section>
             <!-- <section class="over">
